--- a/pse-dbmodell/src/main/webapp/protected/Main.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/Main.xhtml
@@ -27,7 +27,7 @@
 								<h:panelGrid columns="1" style="width:100%"
 									columnClasses="logo,detail">
 									<p:outputPanel>
-										<h:panelGrid columns="6" cellpadding="5">
+										<h:panelGrid columns="7" cellpadding="5">
 											<h:outputLabel
 												value="#{activity.privateMessage ? 'Privat' : 
 												activity.community}"
@@ -43,6 +43,15 @@
 											<h:commandButton
 												action="#{messageDetailsController.openDetailView}"
 												value="Details" icon="ui-icon-search">
+												<f:param name="messageId" value="#{activity.id}" />
+											</h:commandButton>
+											<h:commandButton action="#{simpleFeedController.rateMessage}" value="Like" immediate="true" 
+												rendered="#{!activity.like}">
+												<f:param name="messageId" value="#{activity.id}" />
+											</h:commandButton>
+
+											<h:commandButton action="#{simpleFeedController.removeRating}" value="Like zurücknehmen" immediate="true"
+												rendered="#{activity.like}">
 												<f:param name="messageId" value="#{activity.id}" />
 											</h:commandButton>
 										</h:panelGrid>
