added created communities to UserDTO

--- a/pse-dbmodell/src/main/webapp/protected/User.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/User.xhtml
@@ -235,7 +235,7 @@
 					</p:tab>
 					<p:tab title="Communities">
 						<p:dataTable var="community"
-							value="#{userProfileController.userDTO.communities}">
+							value="#{userProfileController.userDTO.confirmedCommunities}">
 							<p:column headerText="Name">
 								<h:outputText value="#{community.name}" />
 							</p:column>
