--- a/pse-dbmodell/src/main/webapp/protected/Communities.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/Communities.xhtml
@@ -23,6 +23,30 @@
 			    <p:column headerText="Community Name">
 			        <h:outputText value="#{community.name}" />
 			    </p:column>
+			    <p:column headerText="Private">
+			        <h:outputText value="#{community.invitationOnly}" />
+			    </p:column>
+			    <p:column headerText="Action">
+			     	<ui:fragment rendered="#{community.invitationOnly == false}">
+						<p:commandLink actionListener="#{communityController.subscribeCommunity}">	
+			     			<p:commandButton value='addCommunity' id='addCommunity'/>
+			     			<f:param name="communityName" value="#{community.name}" />
+			     			<f:param name="invitationOnly" value="#{community.invitationOnly}" />
+			     			<f:param name="privateUser" value="#{community.privateUser}" />
+			     		</p:commandLink>
+			     	</ui:fragment>
+					<ui:fragment rendered="#{community.invitationOnly == true}">
+						<p:commandLink actionListener="#{communityController.subscribeCommunity}">	
+			     			<p:commandButton value='askCommuity' id='askCommunity'/>
+			     			<f:param name="communityName" value="#{community.name}" />
+			     			<f:param name="invitationOnly" value="#{community.invitationOnly}" />
+			     			<f:param name="privateUser" value="#{community.privateUser}" />
+			     		</p:commandLink>
+			     	</ui:fragment>				
+			    </p:column>
+			    <p:column headerText="isMember">
+						<h:outputText value="TODO" />
+			    </p:column>
 			</p:dataTable>
 		</h:form>
 
