--- a/pse-dbmodell/src/main/webapp/protected/Communities.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/Communities.xhtml
@@ -23,13 +23,18 @@
 			    <p:column headerText="Community Name">
 			        <h:outputText value="#{community.name}" />
 			    </p:column>
-			    <p:column headerText="Private">
-			        <h:outputText value="#{community.invitationOnly}" />
+			    <p:column headerText="isPrivate">
+			    	<ui:fragment rendered="#{community.invitationOnly == false}">
+			    		<h:outputText value="No" />
+			    	</ui:fragment>
+			    	<ui:fragment rendered="#{community.invitationOnly == true}">
+			        	<h:outputText value="Yes" />
+			        </ui:fragment>
 			    </p:column>
 			    <p:column headerText="Action">
 			     	<ui:fragment rendered="#{community.invitationOnly == false}">
 						<p:commandLink update="communities" actionListener="#{communityController.subscribeCommunity}">	
-			     			<p:commandButton value='addCommunity' id='addCommunity'/>
+			     			<p:commandButton value="add_Community" id="addCommunity" disabled="#{communityController.isButtonDisabled(community.name)}" />
 			     			<f:param name="communityName" value="#{community.name}" />
 			     			<f:param name="invitationOnly" value="#{community.invitationOnly}" />
 			     			<f:param name="privateUser" value="#{community.privateUser}" />
@@ -37,7 +42,7 @@
 			     	</ui:fragment>
 					<ui:fragment rendered="#{community.invitationOnly == true}">
 						<p:commandLink actionListener="#{communityController.subscribeCommunity}">	
-			     			<p:commandButton value='askCommuity' id='askCommunity'/>
+			     			<p:commandButton value="ask_Commuity" id="askCommunity" disabled="#{communityController.isButtonDisabled(community.name)}" />
 			     			<f:param name="communityName" value="#{community.name}" />
 			     			<f:param name="invitationOnly" value="#{community.invitationOnly}" />
 			     			<f:param name="privateUser" value="#{community.privateUser}" />
