Added Java-Doc to inserted methods, deleted method in M.DetailsContr.

--- a/pse-dbmodell/src/main/webapp/protected/Main.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/Main.xhtml
@@ -89,7 +89,7 @@
 												rendered="#{empty activity.ratingPersonsList}"/>
 											<!-- <p:graphicImage value="#{messageDetailsController.messageDTO.icon}" cache="false" /> -->
 												
-											<p:dialog id="dial" header="#{activity.author}" widgetVar="dlg1" minHeight="40" dynamic="true">
+											<p:dialog id="dial" header="User" widgetVar="dlg1" minHeight="40" dynamic="true">
 											
 												<p:dataScroller id="ratingScroller" value="#{activity.ratingPersonsList}" var="person" 
 													chunkSize="10" mode="inline" scrollHeight="200" dynamic="true">
