Story point: PSE2015-55 Refactored  -- used communityId instead of communityName for identification  -- modify return value of the isMember... methods from String to Boolean

--- a/pse-dbmodell/src/main/webapp/protected/Communities.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/Communities.xhtml
@@ -34,23 +34,23 @@
 			    <p:column headerText="Action">
 			     	<ui:fragment rendered="#{community.invitationOnly == false}">
 						<p:commandLink update="communities" actionListener="#{communityController.subscribeCommunity}">	
-			     			<p:commandButton value="add_Community" id="addCommunity" disabled="#{communityController.isButtonDisabled(community.name)}" />
-			     			<f:param name="communityName" value="#{community.name}" />
+			     			<p:commandButton value="add_Community" id="addCommunity" disabled="#{communityController.isMemberOfCommunity(community.communityId)}" />
+			     			<f:param name="communityName" value="#{community.communityId}" />
 			     			<f:param name="invitationOnly" value="#{community.invitationOnly}" />
 			     			<f:param name="privateUser" value="#{community.privateUser}" />
 			     		</p:commandLink>
 			     	</ui:fragment>
 					<ui:fragment rendered="#{community.invitationOnly == true}">
 						<p:commandLink actionListener="#{communityController.subscribeCommunity}">	
-			     			<p:commandButton value="ask_Commuity" id="askCommunity" disabled="#{communityController.isButtonDisabled(community.name)}" />
-			     			<f:param name="communityName" value="#{community.name}" />
+			     			<p:commandButton value="ask_Commuity" id="askCommunity" disabled="#{communityController.isMemberOfCommunity(community.communityId)}" />
+			     			<f:param name="communityName" value="#{community.communityId}" />
 			     			<f:param name="invitationOnly" value="#{community.invitationOnly}" />
 			     			<f:param name="privateUser" value="#{community.privateUser}" />
 			     		</p:commandLink>
 			     	</ui:fragment>				
 			    </p:column>
 			    <p:column headerText="isMember">
-			    	<h:outputText value="#{communityController.isMemberOfCommunity(community.name)}" />
+			    	<h:outputText value="#{communityController.isMemberToString(community.communityId)}" />
 			    </p:column>
 			</p:dataTable>
 		</h:form>
