added new xhtml to create community message

--- a/pse-dbmodell/src/main/webapp/protected/Community.xhtml
+++ b/pse-dbmodell/src/main/webapp/protected/Community.xhtml
@@ -20,6 +20,8 @@
 				</p:row>
 			</p:panelGrid>
 	</h:form>
-
+		<div>
+			<a href="#{request.contextPath}/protected/xperimental/AddCommunityMessage.jsf">Commmunity Beitrag erstellen</a>
+		</div>
 	</ui:define>
 </ui:composition>
